syntax = "proto3";

option go_package = ".;service";

service SayHello {
    rpc SayHello(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
    string requestName = 1;
    int64 age = 2;
}

message HelloResponse {
    string responseMsg = 1;
}